# mirror-match

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/src/jsondiff/: __init__.py  main.py
backend/src/jsondiff/adapters/: base.py  elasticsearch.py  http.py  raw.py
backend/src/jsondiff/api/: routes_compare.py  schemas.py
backend/src/jsondiff/diff/: models.py  normalize.py
backend/src/jsondiff/reporters/: html.py
backend/src/jsondiff/reporters/templates/: report.html.j2
backend/src/mirror_match/: __init__.py  cli.py  config.py  main.py
backend/src/mirror_match/api/: auth.py  metrics.py  redact.py  routes_compare.py  schemas.py
backend/src/mirror_match/diff/: engine.py  models.py
backend/src/mirror_match/reporters/: csv.py  html.py
backend/src/mirror_match/reporters/templates/: report.html.j2
backend/src/mirror_match/store/: __init__.py  base.py  postgres.py  sqlite.py
backend/tests/: conftest.py
backend/tests/integration/: test_es_integration.py
backend/tests/unit/: test_api_compare.py  test_api_v02.py  test_auth_and_metrics.py  test_cli.py  test_config_store_selection.py  test_diff_engine.py  test_diff_options.py  test_es_adapter.py  test_html_reporter.py  test_http_adapter.py  test_job_store.py  test_redact.py
docs/: adapters.md  api.md  configuration.md  index.md  mkdocs.yml  quickstart.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: DiffTree.tsx  DiffView.tsx  EditorPane.tsx  SourceForm.tsx
