[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsondiff"
version = "0.1.0"
description = "Field-level JSON comparison tool with web UI and CSV/HTML exports"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JSONDiff contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jsondiff"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/jsondiff"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["jsondiff"]
mypy_path = "src"
