[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirror-match"
version = "1.0.0"
description = "Field-level JSON comparison tool with web UI and CSV/HTML exports"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MirrorMatch contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "elasticsearch>=8.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
mirror-match = "mirror_match.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mirror_match"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/mirror_match"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mirror_match"]
mypy_path = "src"
